Fix Gapminder chart axis formatting

--- a/src/components/generic/gapminder/index.scss
+++ b/src/components/generic/gapminder/index.scss
@@ -1,3 +1,7 @@
+.svg {
+  overflow: visible !important;
+}
+
 .axis path, .axis line {
   fill: none;
   stroke: #000;
